# abrasion

./: .bazelrc  .gitignore  Cargo.toml  README.md  WORKSPACE  result
.github/workflows/: build-actions.yml
assets/: BUILD
assets/shaders/: BUILD  forward.frag  forward.vert  forward_brdf.frag  forward_defs.frag
blender/: BUILD.bazel  README.md  addon.py  export.py
engine/: BUILD  BUILD.bazel  dist_start.sh  globals.rs  init.lua  lib.rs  scene.lua  scripting.rs
engine/input/: BUILD.bazel
engine/physics/: BUILD.bazel  color.rs  lib.rs
engine/release/: BUILD.bazel  defs.bzl  pack.go
engine/release/proto/: BUILD.bazel  manifest.proto
engine/render/: BUILD.bazel  lib.rs  light.rs  material.rs  mesh.rs  renderable.rs  resource.rs
engine/render/vulkan/: data.rs  material.rs  mod.rs  pipeline.rs  pipeline_forward.rs  shaders.rs  surface_binding.rs  swapchain_binding.rs
engine/shaders/: BUILD  forward.frag  forward.vert  triangle.frag  triangle.vert
engine/src/: globals.rs  input.rs  main.rs  scripting.rs
engine/src/physics/: color.rs
engine/src/render/: light.rs  material.rs  mesh.rs  mod.rs  renderable.rs  resource.rs
engine/src/render/vulkan/: binding.rs  data.rs  images.rs  material.rs  mod.rs  pipeline.rs  pipeline_forward.rs  qfi.rs  shaders.rs  swapchain_binding.rs  swapchains.rs  worker.rs
engine/src/scripting/: mod.rs  sent.rs
engine/src/scripting/component/: mod.rs  renderable.rs  transform.rs
engine/src/util/: counter.rs  file.rs  mod.rs  profiler.rs  resourcemap.rs
engine/util/: BUILD.bazel  file.rs  resourcemap.rs
hsvr/: BUILD.bazel  main.rs  scene.lua
lib/ecs/: BUILD
lib/ecs/src/: borrow.rs  component.rs  componentmap.rs  entity.rs  globalmap.rs  index.rs  lib.rs  resourcemap.rs  system.rs  world.rs
lib/ecs_macros/: BUILD
lib/ecs_macros/src/: lib.rs
src/render/: mod.rs  vulkan.rs
src/render/vulkan/: mod.rs
tools/bzl/: glsl.bzl
tools/release/: BUILD.bazel  defs.bzl  pack.go
tools/release/proto/: BUILD.bazel  manifest.proto
