load("@rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "engine",
    edition = "2018",
    rustc_flags = [
        "-C", "opt-level=3",
        "-C", "overflow-checks=n",
        "-C", "force-frame-pointers=y",
        "-C", "lto=off",
        "-Zpolonius",
        "-Zborrowck=mir",
    ],
    srcs = [
        "lib.rs",

        "globals.rs",
        "scripting.rs",
    ],
    deps = [
        "//engine/input",
        "//engine/util",
        "//engine/physics",
        "//engine/render",
        "//lib/ecs",
        "//third_party/cargo:mlua",
        "//third_party/cargo:log",
    ],
    data = glob(["lua/**"]),
    visibility = [
        "//visibility:public",
    ],
)
