load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "pack",
    srcs = ["pack.go"],
    deps = [
        "//tools/release/proto:manifest_go_proto",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
    ],
    visibility = ["//visibility:public"],
)
