load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "manifest_proto",
    srcs = ["manifest.proto"],
)

go_proto_library(
    name = "manifest_go_proto",
    importpath = "abrasion/tools/release/proto",
    protos = [":manifest_proto"],
    visibility = ["//tools/release:__pkg__"],
)
